--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
 /* 
-Copyright 2020 The Webments Authors. All rights reserved.
-Use of this source code is governed by a MIT-style license that can be
+Copyright 2020 The Webments Maintainers and Contributors.
+Use of this source code is governed by a LGPL-2.1-style license that can be
 found in the LICENSE file.
 */
 
