--- a/main.css
+++ b/main.css
@@ -9,7 +9,8 @@ found in the LICENSE file.
   margin-top: 70px;
   margin-right: auto;
   margin-left: auto;
-  border: 1px solid black;
+  border: 4px solid #484848;
+  border-radius: 20px;
   padding-left: 40px;
   padding-right: 40px;
   padding-bottom: 40px;
@@ -31,6 +32,44 @@ found in the LICENSE file.
   margin-top: 50px;
 }
 
-button {
+button,
+select {
   margin: 10px;
+}
+
+.repobuttons {
+  margin-top: 20px;
+}
+
+.titleandsubtitlearea {
+  margin-top: 50px;
+  margin-bottom: -30px;
+}
+.elementtitle {
+  margin-bottom: 10px;
+}
+.buttondiv1 {
+  margin-bottom: 20px;
+}
+
+.belowimg {
+  display: inline-block;   
+  padding: 40px;
+  padding-top: 35px;
+  padding-left:40px;
+  padding-bottom: 40px;
+  padding-right:35px;
+  cursor: pointer;
+}
+.belowimg img{
+  opacity: 50%;
+  transition: 0.2s;
+  width: 40px;
+  border-radius: 8px;
+  height: auto;
+}
+
+.belowimg img:hover {
+  opacity: 100%;
+  transition: 0.2s;
 }
