--- a/main.css
+++ b/main.css
@@ -4,13 +4,31 @@ Use of this source code is governed by a LGPL-2.1-style license that can be
 found in the LICENSE file.
 */
 
+:root {
+  --text-color: white;
+}
+
+html{
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  background-color: var(--background-color);
+  padding-top: 70px;
+  margin: 0px;
+}
+
+h1, h2, h3, h4, h5, h6, p, label, input {
+  color: var(--text-color)
+}
+
+p {
+  color: var(--text-color)
+}
+
 .container {
   max-width: 960px;
-  margin-top: 70px;
   margin-right: auto;
   margin-left: auto;
-  border: 4px solid #484848;
   border-radius: 20px;
+  padding-top: 10px;
   padding-left: 40px;
   padding-right: 40px;
   padding-bottom: 40px;
