--- a/main.css
+++ b/main.css
@@ -8,11 +8,19 @@ found in the LICENSE file.
   --text-color: white;
 }
 
+body {
+  margin:0;
+  background: var(--background-color);
+  background-color: var(--background-color);
+  padding-top:70px;
+}
+
 html{
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   background-color: var(--background-color);
-  padding-top: 70px;
+  background: var(--background-color);
   margin: 0px;
+
 }
 
 h1, h2, h3, h4, h5, h6, p, label, input {
