--- a/main.css
+++ b/main.css
@@ -9,26 +9,34 @@ found in the LICENSE file.
 }
 
 body {
-  margin:0;
+  margin: 0;
   background: var(--background-color);
   background-color: var(--background-color);
-  padding-top:70px;
+  padding-top: 70px;
 }
 
-html{
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+html {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   background-color: var(--background-color);
   background: var(--background-color);
   margin: 0px;
-
 }
 
-h1, h2, h3, h4, h5, h6, p, label, input {
-  color: var(--text-color)
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+label,
+input {
+  color: var(--text-color);
 }
 
 p {
-  color: var(--text-color)
+  color: var(--text-color);
 }
 
 .container {
@@ -79,15 +87,15 @@ select {
 }
 
 .belowimg {
-  display: inline-block;   
+  display: inline-block;
   padding: 40px;
   padding-top: 35px;
-  padding-left:40px;
+  padding-left: 40px;
   padding-bottom: 40px;
-  padding-right:35px;
+  padding-right: 35px;
   cursor: pointer;
 }
-.belowimg img{
+.belowimg img {
   opacity: 50%;
   transition: 0.2s;
   width: 40px;
