--- a/neumorphic.css
+++ b/neumorphic.css
@@ -291,17 +291,143 @@ a.bt:hover {
   background-color: var(--green);
 }
 
+/*checkbox*/
+
+.conatiner {
+  display: block;
+  position: relative;
+  padding-left: 35px;
+  margin-bottom: 12px;
+  cursor: pointer;
+  font-size: 22px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+.conatiner input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
+
+.checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 25px;
+  width: 25px;
+  background-color: #eee;
+}
+
+.conatiner:hover input ~ .checkmark {
+  background-color: #ccc;
+}
+
+.conatiner input:checked ~ .checkmark {
+  background-color: #2196f3;
+}
+
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+.conatiner input:checked ~ .checkmark:after {
+  display: block;
+}
+
+.conatiner .checkmark:after {
+  left: 9px;
+  top: 5px;
+  width: 5px;
+  height: 10px;
+  border: solid white;
+  border-width: 0 3px 3px 0;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+
+/*checkbox*/
+
+/*radio*/
+
+.conatinerradio {
+  display: block;
+  position: relative;
+  padding-left: 35px;
+  margin-bottom: 12px;
+  cursor: pointer;
+  font-size: 22px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+.conatinerradio input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
+
+.checkmarkradio {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 25px;
+  width: 25px;
+  background-color: #eee;
+  border-radius: 50%;
+}
+
+.conatinerradio:hover input ~ .checkmarkradio {
+  background-color: #ccc;
+}
+
+.conatinerradio input:checked ~ .checkmarkradio {
+  background-color: #2196f3;
+}
+
+.checkmarkradio:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+.conatinerradio input:checked ~ .checkmarkradio:after {
+  display: block;
+}
+
+.conatinerradio .checkmarkradio:after {
+  top: 9px;
+  left: 9px;
+  width: 8px;
+  height: 8px;
+  border-radius: 50%;
+  background: white;
+}
+
+/*radio*/
+
 @media (prefers-color-scheme: dark) {
   body {
-      background: #373737;
+    background: #373737;
   }
 
   :root {
-      --text-color: white;
-      --black-white-icon: white;
-      --card-background: linear-gradient(145deg, #3b3b3b, #323232);
-      --card-box-shadow: 9px 9px 18px #2c2c2c, -9px -9px 18px #424242;
-      --button-background: linear-gradient(145deg, #323232, #3b3b3b);
-      --button-box-shadow: 9px 9px 18px #2c2c2c, -9px -9px 18px #424242;
+    --text-color: white;
+    --black-white-icon: white;
+    --card-background: linear-gradient(145deg, #3b3b3b, #323232);
+    --card-box-shadow: 9px 9px 18px #2c2c2c, -9px -9px 18px #424242;
+    --button-background: linear-gradient(145deg, #323232, #3b3b3b);
+    --button-box-shadow: 9px 9px 18px #2c2c2c, -9px -9px 18px #424242;
   }
 }
