--- a/neumorphic.css
+++ b/neumorphic.css
@@ -357,7 +357,7 @@ a.bt:hover {
 
 /*radio*/
 
-.conatinerradio {
+.radiocontainer {
   display: block;
   position: relative;
   padding-left: 35px;
@@ -370,7 +370,7 @@ a.bt:hover {
   user-select: none;
 }
 
-.conatinerradio input {
+.radiocontainer input {
   position: absolute;
   opacity: 0;
   cursor: pointer;
@@ -384,29 +384,33 @@ a.bt:hover {
   left: 0;
   height: 25px;
   width: 25px;
-  background-color: #eee;
+  background: #e7e7e7;
+  box-shadow: inset -2px 2px 5px #d9d9d9, 
+  inset 2px -2px 5px #f5f5f5;
   border-radius: 50%;
 }
 
-.conatinerradio:hover input ~ .checkmarkradio {
-  background-color: #ccc;
-}
 
-.conatinerradio input:checked ~ .checkmarkradio {
-  background-color: #2196f3;
+.radiocontainer input:checked ~ .checkmarkradio {
+  background: #e7e7e7;
+  box-shadow: inset 2px -2px 5px #b1b1b1, 
+  inset -2px 2px 5px #ebebeb;
 }
 
 .checkmarkradio:after {
   content: "";
   position: absolute;
   display: none;
+  background: #e7e7e7;
+  box-shadow: inset -2px 2px 5px #d9d9d9, 
+  inset 2px -2px 5px #f5f5f5;
 }
 
-.conatinerradio input:checked ~ .checkmarkradio:after {
+.radiocontainer input:checked ~ .checkmarkradio:after {
   display: block;
 }
 
-.conatinerradio .checkmarkradio:after {
+.radiocontainer .checkmarkradio:after {
   top: 9px;
   left: 9px;
   width: 8px;
