--- a/neumorphic.css
+++ b/neumorphic.css
@@ -14,11 +14,9 @@ found in the LICENSE file.
   --purple: #7b1fa2;
   --yellow: #ffeb3b;
   --green: #8bc34a;
-  --gradient: linear-gradient(
-    45deg,
-    rgba(255, 29, 17, 0.9),
-    rgba(255, 162, 6, 0.9)
-  );
+  --gradient: linear-gradient(45deg,
+      rgba(255, 29, 17, 0.9),
+      rgba(255, 162, 6, 0.9));
   --dark1: #212121;
   --dark2: #2e2e2e;
   --dark3: #484848;
@@ -31,21 +29,16 @@ found in the LICENSE file.
   --card-box-shadow: 9px 9px 18px #b9b9b9, -9px -9px 18px #ffffff;
   --button-background: #e7e7e7;
   --button-box-shadow: 9px 9px 18px #b9b9b9, -9px -9px 18px #ffffff;
+  --button-box-shadow-hover: 20px 20px 40px #a6a6a6,
+    -20px -20px 40px #ffffff;
+  --button-box-shadow-active: 7px 7px 14px #dbdbdb, 
+  -5px -5px 10px #ffffff;
   --text-color: black;
 }
 
 .container {
   background: var(--card-background);
   box-shadow: var(--card-box-shadow);
-}
-
-button {
-  border-width: 0px;
-  background-color: var(--button-background);
-  box-shadow: var(--button-box-shadow);
-  background-color: #00000000;
-  margin-right: 20px;
-  margin-bottom: 20px;
 }
 
 .orange {
@@ -160,30 +153,6 @@ p,
   font-weight: 300;
 }
 
-.display-1 {
-  font-size: 6rem;
-  font-weight: 300;
-  line-height: 1.2;
-}
-
-.display-2 {
-  font-size: 5.5rem;
-  font-weight: 300;
-  line-height: 1.2;
-}
-
-.display-3 {
-  font-size: 4.5rem;
-  font-weight: 300;
-  line-height: 1.2;
-}
-
-.display-4 {
-  font-size: 3.5rem;
-  font-weight: 300;
-  line-height: 1.2;
-}
-
 /*misc*/
 
 pre,
@@ -200,6 +169,16 @@ blockquote,
 }
 
 /*buttons*/
+
+button {
+  border-width: 0px;
+  background-color: var(--button-background);
+  box-shadow: var(--button-box-shadow);
+  background-color: #00000000;
+  margin-right: 20px;
+  margin-bottom: 20px;
+  transition: .4s;
+}
 
 button,
 .button,
@@ -219,12 +198,22 @@ a.bt {
   padding-bottom: 15px;
   font-size: 1rem;
   width: 170px;
+  transition: .4s;
 }
 
 button:hover,
 .button:hover,
 a.bt:hover {
-  transition: 0.2s;
+  box-shadow: var(--button-box-shadow-hover);
+  transition: .4s;
+}
+
+button:active,
+.button:active,
+a.bt:active {
+  box-shadow: var(--button-box-shadow-active);
+  transition: .4s;
+
 }
 
 .bt-orange {
@@ -323,11 +312,11 @@ a.bt:hover {
   background-color: #eee;
 }
 
-.conatiner:hover input ~ .checkmark {
+.conatiner:hover input~.checkmark {
   background-color: #ccc;
 }
 
-.conatiner input:checked ~ .checkmark {
+.conatiner input:checked~.checkmark {
   background-color: #2196f3;
 }
 
@@ -337,7 +326,7 @@ a.bt:hover {
   display: none;
 }
 
-.conatiner input:checked ~ .checkmark:after {
+.conatiner input:checked~.checkmark:after {
   display: block;
 }
 
@@ -368,6 +357,7 @@ a.bt:hover {
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
+  transition: 0.4s;
 }
 
 .radiocontainer input {
@@ -376,6 +366,7 @@ a.bt:hover {
   cursor: pointer;
   height: 0;
   width: 0;
+  transition: 0.4s;
 }
 
 .checkmarkradio {
@@ -385,16 +376,15 @@ a.bt:hover {
   height: 25px;
   width: 25px;
   background: #e7e7e7;
-  box-shadow: inset -2px 2px 5px #d9d9d9, 
-  inset 2px -2px 5px #f5f5f5;
+  box-shadow: inset -2px 2px 5px #d9d9d9, inset 2px -2px 5px #f5f5f5;
   border-radius: 50%;
+  transition: 0.4s;
 }
 
-
-.radiocontainer input:checked ~ .checkmarkradio {
+.radiocontainer input:checked~.checkmarkradio {
   background: #e7e7e7;
-  box-shadow: inset 2px -2px 5px #b1b1b1, 
-  inset -2px 2px 5px #ebebeb;
+  box-shadow: inset 2px -2px 5px #b1b1b1, inset -2px 2px 5px #ebebeb;
+  transition: 0.4s;
 }
 
 .checkmarkradio:after {
@@ -402,12 +392,13 @@ a.bt:hover {
   position: absolute;
   display: none;
   background: #e7e7e7;
-  box-shadow: inset -2px 2px 5px #d9d9d9, 
-  inset 2px -2px 5px #f5f5f5;
+  box-shadow: inset -2px 2px 5px #d9d9d9, inset 2px -2px 5px #f5f5f5;
+  transition: 0.4s;
 }
 
-.radiocontainer input:checked ~ .checkmarkradio:after {
+.radiocontainer input:checked~.checkmarkradio:after {
   display: block;
+  transition: 0.4s;
 }
 
 .radiocontainer .checkmarkradio:after {
@@ -417,6 +408,7 @@ a.bt:hover {
   height: 8px;
   border-radius: 50%;
   background: white;
+  transition: 0.4s;
 }
 
 /*radio*/
