--- a/neumorphic.css
+++ b/neumorphic.css
@@ -348,6 +348,30 @@ button:disabled {
 
 /*checkbox*/
 
+.display-1 {
+  font-size: 6rem !important;
+  font-weight: 300;
+  line-height: 1.2;
+}
+
+.display-2 {
+  font-size: 5.5rem !important;
+  font-weight: 300;
+  line-height: 1.2;
+}
+
+.display-3 {
+  font-size: 4.5rem !important;
+  font-weight: 300;
+  line-height: 1.2;
+}
+
+.display-4 {
+  font-size: 3.5rem !important;
+  font-weight: 300;
+  line-height: 1.2;
+}
+
 /*radio*/
 
 .radiocontainer {
