--- a/neumorphic.css
+++ b/neumorphic.css
@@ -27,9 +27,9 @@ found in the LICENSE file.
   --light4: #a1a1a1;
   --element-background: #e7e7e7;
   --card-box-shadow: 9px 9px 18px #b9b9b9, -9px -9px 18px #ffffff;
-  --button-box-shadow: 12px 12px 24px 0 rgba(0, 0, 0, 0.2), -12px -12px 24px 0 rgba(255, 255, 255, 0.5);
-  --button-box-shadow-hover: inset 6px 6px 10px 0 rgba(0, 0, 0, 0.2), inset -6px -6px 10px 0 rgba(255, 255, 255, 0.5);
-  --button-box-shadow-active: inset 4px 4px 7px 0 rgba(0, 0, 0, 0.2), inset -4px -4px 7px 0 rgba(255, 255, 255, 0.5);
+  --button-box-shadow: 6px 6px 4px rgba(0, 0, 0, 0.2), -6px -6px 4px rgba(255, 255, 255, 0.5);
+  --button-box-shadow-hover: inset -6px -6px 4px rgba(0, 0, 0, 0.2), inset 6px 6px 4px rgba(255, 255, 255, 0.5);
+  --button-box-shadow-active: inset -6px -6px 4px rgba(0, 0, 0, 0.2), inset 6px 6px 4px rgba(255, 255, 255, 0.5);
   --text-color: black;
 }
 
@@ -174,30 +174,31 @@ button, .button, .bt {
   box-shadow: var(--button-box-shadow);
   margin-right: 20px;
   margin-bottom: 20px;
-  transition: .4s;
   border-radius: 8px;   
   text-align: center;   
   cursor: pointer;      
   font-weight: bold;    
   text-decoration: none;
+  outline: none;
   padding-top: 15px;   
   padding-bottom: 15px;
   font-size: 1rem;
-  width: 170px;       
+  width: 170px;
+  transition: box-shadow 0.4s;
 }
 
 button:hover:enabled,
 .button:hover:enabled,
 .bt:hover:enabled {
   box-shadow: var(--button-box-shadow-hover);
-  transition: .4s;
+  transition: box-shadow 0.4s;
 }
 
 button:active:enabled,
 .button:active:enabled,
 .bt:active:enabled {
   box-shadow: var(--button-box-shadow-active);
-  transition: .4s;
+  transition: box-shadow 0.4s;
 
 }
 
@@ -459,8 +460,8 @@ button:disabled {
     --black-white-icon: white;
     --element-background: linear-gradient(145deg, #3b3b3b, #323232);
     --card-box-shadow: 9px 9px 18px #2c2c2c, -9px -9px 18px #424242;
-    --button-box-shadow: 15px 15px 20px 0 rgba(44, 44, 44, 0.2), -15px -15px 20px 0 rgba(66, 66, 66, 0.5);
-    --button-box-shadow-hover: inset 12px 12px 20px 0 rgba(44, 44, 44, 0.2), inset -12px -12px 20px 0 rgba(66, 66, 66, 0.5);
-    --button-box-shadow-active: inset 4px 4px 7px 0 rgba(44, 44, 44, 0.2), inset -4px -4px 7px 0 rgba(66, 66, 66, 0.5);
+    --button-box-shadow: 6px 6px 4px 0 rgba(44, 44, 44, 0.5), -6px -6px 4px 0 rgba(66, 66, 66, 0.5);
+    --button-box-shadow-hover: -6px -6px 4px 0 rgba(44, 44, 44, 0.2), 6px 6px 4px 0 rgba(66, 66, 66, 0.5);
+    --button-box-shadow-active: -4px -4px 4px 0 rgba(44, 44, 44, 0.2), 4px 4px 4px 0 rgba(66, 66, 66, 0.5);
   }
 }
