--- a/docs/components/flashes.html
+++ b/docs/components/flashes.html
@@ -11,10 +11,10 @@ found in the LICENSE file.
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" type="text/css" href="../main.css" />
-  <link rel="stylesheet" type="text/css" href="../../simplistika.css" />
+  <link rel="stylesheet" type="text/css" href="../../neumorphic.css" />
   <link rel="shortcut icon" href="../assets/icon.png" />
   <script async defer src="https://buttons.github.io/buttons.js"></script>
-  <title>Flashes | Webments | Simplistika</title>
+  <title>Flashes | Webments | Neumorphic</title>
 </head>
 
 <body>
@@ -44,13 +44,13 @@ found in the LICENSE file.
   </div>
     <div class="container">
       <div class="repobuttonstop">
-        <button class="mini-bt br-orange" href="https://github.com/webments/simplistika.css">Star</button>
-        <button class="mini-bt br-orange" href="https://github.com/webments/simplistika.css/fork">Fork</button>
-        <button class="mini-bt br-orange" href="https://github.com/webments/simplistika.css/subscription">Watch</button>
+        <button class="mini-bt br-orange" href="https://github.com/webments/neumorphic.css">Star</button>
+        <button class="mini-bt br-orange" href="https://github.com/webments/neumorphic.css/fork">Fork</button>
+        <button class="mini-bt br-orange" href="https://github.com/webments/neumorphic.css/subscription">Watch</button>
       </div>
       
     <div class="titleandsubtitlearea">
-      <h4 class="title">Webments | simplistika.css</h4>
+      <h4 class="title">Webments | neumorphic.css</h4>
       <h1>Flashes</h1>
     </div>
     <div class="elementsdiv">
