--- a/docs/components/buttons.html
+++ b/docs/components/buttons.html
@@ -43,115 +43,41 @@ found in the LICENSE file.
     </ul>
   </div>
 
-  
-  
-    <div class="container">
-      <div class="repobuttonstop">
-        <button class="mini-bt br-orange" href="https://github.com/webments/neumorphic.css">Star</button>
-        <button class="mini-bt br-orange" href="https://github.com/webments/neumorphic.css/fork">Fork</button>
-        <button class="mini-bt br-orange" href="https://github.com/webments/neumorphic.css/subscription">Watch</button>
-      </div>
-      <div class="titleandsubtitlearea">
-        <h4 class="title">Webments | neumorphic.css</h4>
-        <h1>Buttons</h1>
-      </div>
+
+
+  <div class="container">
+    <div class="repobuttonstop">
+      <button class="mini-bt br-orange" href="https://github.com/webments/neumorphic.css">Star</button>
+      <button class="mini-bt br-orange" href="https://github.com/webments/neumorphic.css/fork">Fork</button>
+      <button class="mini-bt br-orange" href="https://github.com/webments/neumorphic.css/subscription">Watch</button>
+    </div>
+    <div class="titleandsubtitlearea">
+      <h4 class="title">Webments | neumorphic.css</h4>
+      <h1>Buttons</h1>
+    </div>
 
     <div class="elementsdiv">
       <div class="elementdiv">
-        <button class="bt br-orange">Button</button>
-        <button class="bt br-blue">Button</button>
-        <button class="bt br-light-blue">Button</button>
-        <button class="bt br-red">Button</button>
-        <button class="bt br-pink">Button</button>
-        <button class="bt br-purple">Button</button>
-        <button class="bt br-yellow">Button</button>
-        <button class="bt br-green">Button</button>
+        <button class="bt">Button</button>
 
         <pre class="dark3"><code>
-  &lt;button class="bt br-orange">Button&lt;/button&gt;
-  &lt;button class="bt br-blue">Button&lt;/button&gt;
-  &lt;button class="bt br-light-blue">Button&lt;/button&gt;
-  &lt;button class="bt br-red">Button&lt;/button&gt;
-  &lt;button class="bt br-pink">Button&lt;/button&gt;
-  &lt;button class="bt br-purple">Button&lt;/button&gt;
-  &lt;button class="bt br-yellow">Button&lt;/button&gt;
-  &lt;button class="bt br-green">Button&lt;/button&gt;
+  &lt;button class="bt">Button&lt;/button&gt;
           </code></pre>
 
         <h4>Disabled</h4>
-        <button class="bt br-orange" disabled>Button</button>
-        <button class="bt br-blue" disabled>Button</button>
-        <button class="bt br-light-blue" disabled>Button</button>
-        <button class="bt br-red" disabled>Button</button>
-        <button class="bt br-pink" disabled>Button</button>
-        <button class="bt br-purple" disabled>Button</button>
-        <button class="bt br-yellow" disabled>Button</button>
-        <button class="bt br-green" disabled>Button</button>
+        <button class="bt" disabled>Button</button>
 
         <pre class="dark3"><code>
-  &lt;button disabled class="bt br-orange">Button&lt;/button&gt;
-  &lt;button disabled class="bt br-blue">Button&lt;/button&gt;
-  &lt;button disabled class="bt br-light-blue">Button&lt;/button&gt;
-  &lt;button disabled class="bt br-red">Button&lt;/button&gt;
-  &lt;button disabled class="bt br-pink">Button&lt;/button&gt;
-  &lt;button disabled class="bt br-purple">Button&lt;/button&gt;
-  &lt;button disabled class="bt br-yellow">Button&lt;/button&gt;
-  &lt;button disabled class="bt br-green">Button&lt;/button&gt;         
-          </code></pre>
-
-        <h4>Mini</h4>
-        <button class="mini-bt br-orange">Button</button>
-        <button class="mini-bt br-blue">Button</button>
-        <button class="mini-bt br-light-blue">Button</button>
-        <button class="mini-bt br-red">Button</button>
-        <button class="mini-bt br-pink">Button</button>
-        <button class="mini-bt br-purple">Button</button>
-        <button class="mini-bt br-yellow">Button</button>
-        <button class="mini-bt br-green">Button</button>
-
-        <pre class="dark3"><code>
-  &lt;button class="mini-bt br-orange">Button&lt;/button&gt;
-  &lt;button class="mini-bt br-blue">Button&lt;/button&gt;
-  &lt;button class="mini-bt br-light-blue">Button&lt;/button&gt;
-  &lt;button class="mini-bt br-red">Button&lt;/button&gt;
-  &lt;button class="mini-bt br-pink">Button&lt;/button&gt;
-  &lt;button class="mini-bt br-purple">Button&lt;/button&gt;
-  &lt;button class="mini-bt br-yellow">Button&lt;/button&gt;
-  &lt;button class="mini-bt br-green">Button&lt;/button&gt;             
-                  </code></pre>
-
-        <h4>Disabled</h4>
-        <button disabled class="mini-bt br-orange">Button</button>
-        <button disabled class="mini-bt br-blue">Button</button>
-        <button disabled class="mini-bt br-light-blue">Button</button>
-        <button disabled class="mini-bt br-red">Button</button>
-        <button disabled class="mini-bt br-pink">Button</button>
-        <button disabled class="mini-bt br-purple">Button</button>
-        <button disabled class="mini-bt br-yellow">Button</button>
-        <button disabled class="mini-bt br-green">Button</button>
-
-        <pre class="dark3"><code>
-  &lt;button disabled class="mini-bt br-orange">Button&lt;/button&gt;
-  &lt;button disabled class="mini-bt br-blue">Button&lt;/button&gt;
-  &lt;button disabled class="mini-bt br-light-blue">Button&lt;/button&gt;
-  &lt;button disabled class="mini-bt br-red">Button&lt;/button&gt;
-  &lt;button disabled class="mini-bt br-pink">Button&lt;/button&gt;
-  &lt;button disabled class="mini-bt br-purple">Button&lt;/button&gt;
-  &lt;button disabled class="mini-bt br-yellow">Button&lt;/button&gt;
-  &lt;button disabled class="mini-bt br-green">Button&lt;/button&gt;
+  &lt;button disabled class="bt">Button&lt;/button&gt;
           </code></pre>
 
       </div>
     </div>
 
-
-
   </div>
-
   <footer>
     <center>
-      <a class="belowimg" href="https://github.com/Webments" target="_blank"><img
-          src="../assets/footer.png"></img></a>
+      <a class="belowimg" href="https://github.com/Webments" target="_blank"><img src="../assets/footer.png"></img></a>
       <p class="footercopyright">Copyright 2020 The Webments Maintainers and Contributors.</p>
     </center>
   </footer>
